--- a/第10章_纽伦堡审判.md
+++ b/第10章_纽伦堡审判.md
@@ -454,7 +454,11 @@
 
 ---
 
-**下一章预告**：世界人权宣言 - 全人类的共同承诺！这份文件如何改变了世界？
+## 📖 章节导航
+
+**上一章**：[米兰达警告](./第9章_米兰达警告.md) - 你有权保持沉默！为什么警察逮捕你时都要说这句话？
+
+**下一章**：[世界人权宣言](./第11章_世界人权宣言.md) - 全人类的共同承诺！这份文件如何改变了世界？
 
 ---
 
