--- a/第11章_世界人权宣言.md
+++ b/第11章_世界人权宣言.md
@@ -405,6 +405,12 @@
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[纽伦堡审判](./第10章_纽伦堡审判.md) - 战后正义的体现，战争罪犯的审判
+
+**下一章**：[反垄断法](./第12章_反垄断法.md) - 不让大公司为所欲为，维护公平竞争
+
 **本章字数：约3200字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
