--- a/第12章_反垄断法.md
+++ b/第12章_反垄断法.md
@@ -357,6 +357,12 @@
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[世界人权宣言](./第11章_世界人权宣言.md) - 全人类的共同承诺，基本权利的保障
+
+**下一章**：[环境保护法](./第13章_环境保护法.md) - 地球也要有法律保护，生态平衡的维护
+
 **本章字数：约3200字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
