--- a/第13章_环境保护法.md
+++ b/第13章_环境保护法.md
@@ -425,6 +425,12 @@
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[反垄断法](./第12章_反垄断法.md) - 不让大公司为所欲为，维护公平竞争
+
+**下一章**：[数据隐私法](./第14章_数据隐私法.md) - 你的数据属于谁，个人信息保护的法律保障
+
 **本章字数：约3300字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
