--- a/第14章_数据隐私法.md
+++ b/第14章_数据隐私法.md
@@ -435,6 +435,12 @@
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[环境保护法](./第13章_环境保护法.md) - 地球也要有法律保护，生态平衡的维护
+
+**下一章**：[人工智能法律](./第15章_人工智能法律.md) - 机器人也要遵守法律，AI时代的法律挑战
+
 **本章字数：约3200字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
