--- a/第15章_人工智能法律.md
+++ b/第15章_人工智能法律.md
@@ -432,6 +432,12 @@ AI是全球性技术，需要国际协调：
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[数据隐私法](./第14章_数据隐私法.md) - 你的数据属于谁，个人信息保护的法律保障
+
+**下一章**：[网络安全法](./第16章_网络安全法.md) - 网络世界的警察，数字生活的安全守护
+
 **本章字数：约3300字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
