--- a/第16章_网络安全法.md
+++ b/第16章_网络安全法.md
@@ -513,6 +513,12 @@
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[人工智能法律](./第15章_人工智能法律.md) - 机器人也要遵守法律，AI时代的法律挑战
+
+**下一章**：[版权法](./第17章_版权法.md) - 保护创作者的权利，创意如何成为法律保护的财产
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
