--- a/第18章_社交媒体法律.md
+++ b/第18章_社交媒体法律.md
@@ -490,6 +490,12 @@
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[版权法](./第17章_版权法.md) - 保护创作者的权利，创意如何成为法律保护的财产
+
+**下一章**：[妇女权利法](./第19章_妇女权利法.md) - 从财产到平等的漫长道路，女性权利的法律保障历程
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
