--- a/第19章_妇女权利法.md
+++ b/第19章_妇女权利法.md
@@ -491,6 +491,12 @@
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[社交媒体法律](./第18章_社交媒体法律.md) - 你在网上的每一句话都有法律效力，网络言论的法律边界
+
+**下一章**：[反歧视法](./第20章_反歧视法.md) - 人人平等的承诺，法律如何消除各种形式的歧视
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
