--- a/第1章_汉谟拉比法典.md
+++ b/第1章_汉谟拉比法典.md
@@ -211,3 +211,11 @@
 **本章字数：约3200字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
+
+---
+
+## 📖 章节导航
+
+**上一章**：本书开始 - 让我们一起探索法律的奇妙世界！
+
+**下一章**：[第2章：古罗马十二铜表法](./第2章_古罗马十二铜表法.md) - 法律也要写出来给普通人看！为什么贵族们气得要死？
