--- a/第20章_反歧视法.md
+++ b/第20章_反歧视法.md
@@ -482,6 +482,12 @@
 
 ---
 
+## 📖 章节导航
+
+**上一章**：[妇女权利法](./第19章_妇女权利法.md) - 从财产到平等的漫长道路，女性权利的法律保障历程
+
+**下一章**：[同性婚姻合法化](./第21章_同性婚姻合法化.md) - 爱情的胜利，法律如何承认和保护同性伴侣关系
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
