--- a/第21章_同性婚姻合法化.md
+++ b/第21章_同性婚姻合法化.md
@@ -512,6 +512,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[反歧视法](./第20章_反歧视法.md) - 人人平等的承诺
+
+**下一章**：[破产法](./第22章_破产法.md) - 给了失败者重新开始的机会
+
+---
+
 **本章字数：约3300字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
