--- a/第22章_破产法.md
+++ b/第22章_破产法.md
@@ -542,6 +542,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[同性婚姻合法化](./第21章_同性婚姻合法化.md) - 爱情的胜利
+
+**下一章**：[证券法](./第23章_证券法.md) - 保护股民的钱袋子
+
+---
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
