--- a/第23章_证券法.md
+++ b/第23章_证券法.md
@@ -578,6 +578,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[破产法](./第22章_破产法.md) - 给了失败者重新开始的机会
+
+**下一章**：[消费者权益保护法](./第24章_消费者权益保护法.md) - 顾客就是上帝
+
+---
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
