--- a/第24章_消费者权益保护法.md
+++ b/第24章_消费者权益保护法.md
@@ -670,6 +670,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[证券法](./第23章_证券法.md) - 保护股民的钱袋子
+
+**下一章**：[无罪推定](./第25章_无罪推定.md) - 在证明有罪之前，你都是无辜的
+
+---
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
