--- a/第25章_无罪推定.md
+++ b/第25章_无罪推定.md
@@ -488,6 +488,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[消费者权益保护法](./第24章_消费者权益保护法.md) - 顾客就是上帝
+
+**下一章**：[正当防卫](./第26章_正当防卫.md) - 保护自己不算犯法
+
+---
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
