--- a/第27章_陪审团制度.md
+++ b/第27章_陪审团制度.md
@@ -586,6 +586,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[正当防卫](./第26章_正当防卫.md) - 保护自己不算犯法
+
+**下一章**：[海商法](./第28章_海商法.md) - 海洋世界的法律规则
+
+---
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
