--- a/第28章_海商法.md
+++ b/第28章_海商法.md
@@ -593,6 +593,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[陪审团制度](./第27章_陪审团制度.md) - 普通人也能决定法律问题
+
+**下一章**：[外交豁免权](./第29章_外交豁免权.md) - 外国大使为什么不会被逮捕
+
+---
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️
