--- a/第29章_外交豁免权.md
+++ b/第29章_外交豁免权.md
@@ -646,6 +646,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[海商法](./第28章_海商法.md) - 海洋世界的法律规则
+
+**下一章**：[国际刑法](./第30章_国际刑法.md) - 战争罪也要受到惩罚
+
+---
+
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️
