--- a/第2章_古罗马十二铜表法.md
+++ b/第2章_古罗马十二铜表法.md
@@ -261,3 +261,11 @@
 **本章字数：约3100字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
+
+---
+
+## 📖 章节导航
+
+**上一章**：[第1章：汉谟拉比法典](./第1章_汉谟拉比法典.md) - 3800年前的"以眼还眼"到底有多狠？
+
+**下一章**：[第3章：中国秦律](./第3章_中国秦律.md) - 为什么说秦朝的法律严到让百姓闻风丧胆？
