--- a/第30章_国际刑法.md
+++ b/第30章_国际刑法.md
@@ -645,6 +645,16 @@
 
 ---
 
+---
+
+## 📖 章节导航
+
+**上一章**：[外交豁免权](./第29章_外交豁免权.md) - 外国大使为什么不会被逮捕
+
+**下一章**：[全书完结](./README.md) - 感谢阅读这本法律趣史！
+
+---
+
 **全书完结！**
 **感谢阅读这本法律趣史！希望这些故事让你对法律有了新的认识和理解！**
 
