--- a/第3章_中国秦律.md
+++ b/第3章_中国秦律.md
@@ -236,3 +236,11 @@
 **本章字数：约3500字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
+
+---
+
+## 📖 章节导航
+
+**上一章**：[第2章：古罗马十二铜表法](./第2章_古罗马十二铜表法.md) - 法律也要写出来给普通人看！为什么贵族们气得要死？
+
+**下一章**：[第4章：大宪章](./第4章_大宪章.md) - 国王也要守规矩！英国贵族们如何用一张纸限制了王权？
