--- a/第4章_大宪章.md
+++ b/第4章_大宪章.md
@@ -233,3 +233,11 @@
 **本章字数：约3400字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
+
+---
+
+## 📖 章节导航
+
+**上一章**：[第3章：中国秦律](./第3章_中国秦律.md) - 为什么说秦朝的法律严到让百姓闻风丧胆？
+
+**下一章**：[第5章：权利法案](./第5章_权利法案.md) - 老百姓终于有了说话的权利！英国议会如何用法律限制了王权？
