--- a/第5章_权利法案.md
+++ b/第5章_权利法案.md
@@ -252,3 +252,11 @@
 **本章字数：约3200字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
+
+---
+
+## 📖 章节导航
+
+**上一章**：[第4章：大宪章](./第4章_大宪章.md) - 国王也要守规矩！英国贵族们如何用一张纸限制了王权？
+
+**下一章**：[第6章：拿破仑法典](./第6章_拿破仑法典.md) - 拿破仑用一部法典征服了欧洲，比他的军队还厉害！
