--- a/第6章_拿破仑法典.md
+++ b/第6章_拿破仑法典.md
@@ -286,3 +286,11 @@
 **本章字数：约3300字** ✅
 **趣味指数**：⭐️⭐️⭐️⭐️⭐️
 **易懂指数**：⭐️⭐️⭐️⭐️⭐️
+
+---
+
+## 📖 章节导航
+
+**上一章**：[第5章：权利法案](./第5章_权利法案.md) - 老百姓终于有了说话的权利！英国议会如何用法律限制了王权？
+
+**下一章**：[第7章：马伯里诉麦迪逊案](./第7章_马伯里诉麦迪逊案.md) - 法院有权说"不"！一个小案件如何确立了美国宪政制度？
