--- a/第8章_斯科特案.md
+++ b/第8章_斯科特案.md
@@ -354,7 +354,11 @@
 
 ---
 
-**下一章预告**：米兰达警告 - 你有权保持沉默！为什么警察逮捕你时都要说这句话？
+## 📖 章节导航
+
+**上一章**：[马伯里诉麦迪逊案](./第7章_马伯里诉麦迪逊案.md) - 法院有权说"不"！一个小案件如何改变了美国宪政？
+
+**下一章**：[米兰达警告](./第9章_米兰达警告.md) - 你有权保持沉默！为什么警察逮捕你时都要说这句话？
 
 ---
 
