--- a/第9章_米兰达警告.md
+++ b/第9章_米兰达警告.md
@@ -403,7 +403,11 @@
 
 ---
 
-**下一章预告**：纽伦堡审判 - 战后正义的体现！如何通过法律审判战争罪犯？
+## 📖 章节导航
+
+**上一章**：[斯科特案](./第8章_斯科特案.md) - 引发内战的法律判决！一个黑奴的自由诉讼如何撕裂了美国？
+
+**下一章**：[纽伦堡审判](./第10章_纽伦堡审判.md) - 战后正义的体现！如何通过法律审判战争罪犯？
 
 ---
 
