--- a/第7章_马伯里诉麦迪逊案.md
+++ b/第7章_马伯里诉麦迪逊案.md
@@ -219,7 +219,11 @@
 
 ---
 
-**下一章预告**：斯科特案 - 引发内战的法律判决！一个黑奴的自由诉讼如何撕裂了美国？
+## 📖 章节导航
+
+**上一章**：[拿破仑法典](./第6章_拿破仑法典.md) - 现代法律的"模板"，一个皇帝如何用法律改变了整个欧洲？
+
+**下一章**：[斯科特案](./第8章_斯科特案.md) - 引发内战的法律判决！一个黑奴的自由诉讼如何撕裂了美国？
 
 ---
 
