docs(docs): add podcast audio support to chapter structure
Add support for embedding podcast audio players in chapter markdown files.
Include new section in chapter structure for podcast audio, with formatting guidelines and file naming conventions.
Update checklists and project status accordingly.

--- a/第1章_汉谟拉比法典.md
+++ b/第1章_汉谟拉比法典.md
@@ -1,5 +1,14 @@
 # 第1章：汉谟拉比法典 - 3800年前的"以眼还眼"到底有多狠？👁️
 
+## 🎧 收听本章播客
+
+<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+  <source src="podcast/第1章_汉谟拉比法典.mp3" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="podcast/第1章_汉谟拉比法典.mp3">下载音频文件</a>。
+</audio>
+
+---
+
 *现存于法国卢浮宫的汉谟拉比法典石柱，高2.25米，距今3800年 📍*
 
 ## 💥 开头故事：一个古巴比伦的建筑师悲剧
