--- a/第2章_古罗马十二铜表法.md
+++ b/第2章_古罗马十二铜表法.md
@@ -1,5 +1,14 @@
 # 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让平民看懂？📜
 
+## 🎧 收听本章播客
+
+<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+  <source src="podcast/第2章_古罗马十二铜表法.mp3" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="podcast/第2章_古罗马十二铜表法.mp3">下载音频文件</a>。
+</audio>
+
+---
+
 ## 💥 开头故事：平民的愤怒抗议
 
 公元前451年的某个黄昏，罗马广场上聚集了成千上万的平民。
