--- a/第4章_大宪章.md
+++ b/第4章_大宪章.md
@@ -1,5 +1,14 @@
 # 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服了暴君👑
 
+## 🎧 收听本章播客
+
+<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+  <source src="podcast/第4章_大宪章.mp3" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="podcast/第4章_大宪章.mp3">下载音频文件</a>。
+</audio>
+
+---
+
 ## 💥 开头故事：泰晤士河畔的生死对峙
 
 1215年6月15日，伦敦西郊的兰尼米德草地。
