--- a/第1章_汉谟拉比法典.md
+++ b/第1章_汉谟拉比法典.md
@@ -2,10 +2,10 @@
 
 ## 🎧 收听本章播客
 
-<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+<video controls style="width: 100%; max-width: 600px; margin: 20px 0;">
   <source src="podcast/第1章_汉谟拉比法典.mp3" type="audio/mpeg">
-  您的浏览器不支持音频播放，请<a href="podcast/第1章_汉谟拉比法典.mp3">下载音频文件</a>。
-</audio>
+  <source src="podcast/第1章_汉谟拉比法典.mp4" type="video/mp4">
+</video>
 
 ---
 
