docs(docs): update comparison methods documentation

--- a/第1章_汉谟拉比法典.md
+++ b/第1章_汉谟拉比法典.md
@@ -2,10 +2,24 @@
 
 ## 🎧 收听本章播客
 
-<video controls style="width: 100%; max-width: 600px; margin: 20px 0;">
+<!-- Audio player (works in most browsers) -->
+<audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
   <source src="podcast/第1章_汉谟拉比法典.mp3" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="podcast/第1章_汉谟拉比法典.mp3">下载音频文件</a>。
+</audio>
+
+<!-- Video fallback (works on GitHub/GitLab) -->
+<video controls style="width: 100%; max-width: 600px; margin: 20px 0;">
   <source src="podcast/第1章_汉谟拉比法典.mp4" type="video/mp4">
+  您的浏览器不支持视频播放，请<a href="podcast/第1章_汉谟拉比法典.mp4">下载视频文件</a>。
 </video>
+
+![](podcast/第1章_汉谟拉比法典.mp4)
+
+**注意：**
+- 🔊 **普通浏览器**：使用上方音频播放器
+- 🎬 **GitHub/GitLab**：使用下方视频播放器
+- 📱 **移动设备**：建议直接下载音频文件收听
 
 ---
 
