feat: add Jekyll site for legal history book
Add new Jekyll site structure including configuration, layouts, navigation, and initial content for "法律趣史：30个改变世界的法律故事". Includes updated .gitignore, Gemfile, _config.yml, default layout with dark mode, navigation include, and index page with chapter listings.

--- a/第11章_世界人权宣言.md
+++ b/第11章_世界人权宣言.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第11章：世界人权宣言 - 全人类的共同承诺！这份文件如何改变了世界？🌍
+---
+
 # 第11章：世界人权宣言 - 全人类的共同承诺！这份文件如何改变了世界？🌍
 
 ## 💥 开头故事：1948年12月10日的历史性时刻
@@ -400,9 +405,4 @@
 5. **个人角色**：作为普通人，我们如何为人权事业做出贡献？如何在日常生活中保护和促进人权？
 
 
-## 📖 章节导航
-
-**上一章**：[纽伦堡审判](./第10章_纽伦堡审判.md) - 战后正义的体现，战争罪犯的审判
-
-**下一章**：[反垄断法](./第12章_反垄断法.md) - 不让大公司为所欲为，维护公平竞争
 
