--- a/第12章_反垄断法.md
+++ b/第12章_反垄断法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第12章：反垄断法 - 不让大公司为所欲为！如何用法律遏制经济巨头？💼
+---
+
 # 第12章：反垄断法 - 不让大公司为所欲为！如何用法律遏制经济巨头？💼
 
 ## 💥 开头故事：石油大王的帝国崩溃
@@ -352,9 +357,4 @@
 5. **中国经验**：中国的反垄断实践有什么特色？对其他发展中国家有什么借鉴意义？
 
 
-## 📖 章节导航
-
-**上一章**：[世界人权宣言](./第11章_世界人权宣言.md) - 全人类的共同承诺，基本权利的保障
-
-**下一章**：[环境保护法](./第13章_环境保护法.md) - 地球也要有法律保护，生态平衡的维护
 
