--- a/第13章_环境保护法.md
+++ b/第13章_环境保护法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第13章：环境保护法 - 地球也要有法律保护！如何用法律拯救我们的家园？🌳
+---
+
 # 第13章：环境保护法 - 地球也要有法律保护！如何用法律拯救我们的家园？🌳
 
 ## 💥 开头故事：卡森夫人的环保革命
@@ -420,9 +425,4 @@
 5. **未来挑战**：面对气候变化、生物多样性丧失等全球性挑战，环境法应该如何发展和完善？
 
 
-## 📖 章节导航
-
-**上一章**：[反垄断法](./第12章_反垄断法.md) - 不让大公司为所欲为，维护公平竞争
-
-**下一章**：[数据隐私法](./第14章_数据隐私法.md) - 你的数据属于谁，个人信息保护的法律保障
 
