--- a/第14章_数据隐私法.md
+++ b/第14章_数据隐私法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第14章：数据隐私法 - 你的数据属于谁？数字时代的个人信息保护！📱
+---
+
 # 第14章：数据隐私法 - 你的数据属于谁？数字时代的个人信息保护！📱
 
 ## 💥 开头故事：斯诺登的惊天爆料
@@ -430,9 +435,4 @@
 5. **未来发展**：随着人工智能、元宇宙等新技术的发展，隐私保护面临哪些新的挑战？法律应该如何应对？
 
 
-## 📖 章节导航
-
-**上一章**：[环境保护法](./第13章_环境保护法.md) - 地球也要有法律保护，生态平衡的维护
-
-**下一章**：[人工智能法律](./第15章_人工智能法律.md) - 机器人也要遵守法律，AI时代的法律挑战
 
