--- a/第15章_人工智能法律.md
+++ b/第15章_人工智能法律.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第15章：人工智能法律 - 机器人也要遵守法律吗？AI时代的法律挑战！🤖
+---
+
 # 第15章：人工智能法律 - 机器人也要遵守法律吗？AI时代的法律挑战！🤖
 
 ## 💥 开头故事：自动驾驶汽车的致命事故
@@ -427,9 +432,4 @@ AI是全球性技术，需要国际协调：
 5. **人类未来**：随着AI越来越智能，人类与AI的关系会如何发展？法律应该如何适应这种变化？
 
 
-## 📖 章节导航
-
-**上一章**：[数据隐私法](./第14章_数据隐私法.md) - 你的数据属于谁，个人信息保护的法律保障
-
-**下一章**：[网络安全法](./第16章_网络安全法.md) - 网络世界的警察，数字生活的安全守护
 
