--- a/第18章_社交媒体法律.md
+++ b/第18章_社交媒体法律.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第18章：社交媒体法律 - 你在网上的每一句话都有法律效力！网络言论的法律边界在哪里？📱
+---
+
 # 第18章：社交媒体法律 - 你在网上的每一句话都有法律效力！网络言论的法律边界在哪里？📱
 
 ## 💥 开头故事：一条推文引发的跨国风波
@@ -485,9 +490,4 @@
 5. **个人隐私与公共利益**：在社交媒体时代，如何在保护个人隐私的同时，维护公共利益和社会安全？
 
 
-## 📖 章节导航
-
-**上一章**：[版权法](./第17章_版权法.md) - 保护创作者的权利，创意如何成为法律保护的财产
-
-**下一章**：[妇女权利法](./第19章_妇女权利法.md) - 从财产到平等的漫长道路，女性权利的法律保障历程
 
