--- a/第19章_妇女权利法.md
+++ b/第19章_妇女权利法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第19章：妇女权利法 - 从财产到平等的漫长道路！女性权利的法律保障历程！👩
+---
+
 # 第19章：妇女权利法 - 从财产到平等的漫长道路！女性权利的法律保障历程！👩
 
 ## 💥 开头故事：苏珊·安东尼的投票斗争
@@ -486,9 +491,4 @@
 5. **未来挑战**：面对人工智能、气候变化等全球性挑战，妇女权利面临哪些新的机遇和挑战？
 
 
-## 📖 章节导航
-
-**上一章**：[社交媒体法律](./第18章_社交媒体法律.md) - 你在网上的每一句话都有法律效力，网络言论的法律边界
-
-**下一章**：[反歧视法](./第20章_反歧视法.md) - 人人平等的承诺，法律如何消除各种形式的歧视
 
