--- a/第1章_汉谟拉比法典.md
+++ b/第1章_汉谟拉比法典.md
@@ -1,10 +1,15 @@
+---
+layout: default
+title: 第1章：汉谟拉比法典 - 3800年前的"以眼还眼"到底有多狠？
+---
+
 # 第1章：汉谟拉比法典 - 3800年前的"以眼还眼"到底有多狠？👁️
 
 ## 🎧 收听本章播客
 
 <audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
-  <source src="podcast/第1章_汉谟拉比法典.mp3" type="audio/mpeg">
-  您的浏览器不支持音频播放，请<a href="podcast/第1章_汉谟拉比法典.mp3">下载音频文件</a>。
+  <source src="/podcast/第1章_汉谟拉比法典.mp3" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="/podcast/第1章_汉谟拉比法典.mp3">下载音频文件</a>。
 </audio>
 
 *现存于法国卢浮宫的汉谟拉比法典石柱，高2.25米，距今3800年 📍*
@@ -208,10 +213,3 @@
 3. **个人体验**：你有没有遇到过"不公平"的法律执行？你认为怎样才能让法律更公平？
 
 4. **未来法律**：如果让你为21世纪制定一部法典，你会保留汉谟拉比的哪些原则？又会废除哪些？
-
-
-## 📖 章节导航
-
-**上一章**：本书开始 - 让我们一起探索法律的奇妙世界！
-
-**下一章**：[第2章：古罗马十二铜表法](./第2章_古罗马十二铜表法.md) - 法律也要写出来给普通人看！为什么贵族们气得要死？
