--- a/第20章_反歧视法.md
+++ b/第20章_反歧视法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第20章：反歧视法 - 人人平等的承诺！法律如何消除各种形式的歧视？⚖️
+---
+
 # 第20章：反歧视法 - 人人平等的承诺！法律如何消除各种形式的歧视？⚖️
 
 ## 💥 开头故事：罗莎·帕克斯的勇敢拒绝
@@ -477,9 +482,4 @@
 5. **个人责任与社会责任**：消除歧视是法律的责任还是道德的责任？个人在反歧视中应该扮演什么角色？
 
 
-## 📖 章节导航
-
-**上一章**：[妇女权利法](./第19章_妇女权利法.md) - 从财产到平等的漫长道路，女性权利的法律保障历程
-
-**下一章**：[同性婚姻合法化](./第21章_同性婚姻合法化.md) - 爱情的胜利，法律如何承认和保护同性伴侣关系
 
