--- a/第21章_同性婚姻合法化.md
+++ b/第21章_同性婚姻合法化.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第21章：同性婚姻合法化 - 爱情的胜利！法律如何承认和保护同性伴侣关系？🌈
+---
+
 # 第21章：同性婚姻合法化 - 爱情的胜利！法律如何承认和保护同性伴侣关系？🌈
 
 ## 💥 开头故事：埃德蒙和詹姆斯的50年等待
@@ -507,9 +512,4 @@
 5. **未来发展**：同性婚姻权利的未来发展趋势是什么？还有哪些权益需要进一步争取？
 
 
-## 📖 章节导航
-
-**上一章**：[反歧视法](./第20章_反歧视法.md) - 人人平等的承诺
-
-**下一章**：[破产法](./第22章_破产法.md) - 给了失败者重新开始的机会
 
