--- a/第22章_破产法.md
+++ b/第22章_破产法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第22章：破产法 - 给了失败者重新开始的机会！法律如何帮助债务人和解重生？💰
+---
+
 # 第22章：破产法 - 给了失败者重新开始的机会！法律如何帮助债务人和解重生？💰
 
 ## 💥 开头故事：特朗普的六次破产重生
@@ -537,9 +542,4 @@
 5. **未来发展**：随着数字经济和平台经济的发展，破产法需要做出哪些调整来适应新的商业模式？
 
 
-## 📖 章节导航
-
-**上一章**：[同性婚姻合法化](./第21章_同性婚姻合法化.md) - 爱情的胜利
-
-**下一章**：[证券法](./第23章_证券法.md) - 保护股民的钱袋子
 
