--- a/第23章_证券法.md
+++ b/第23章_证券法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第23章：证券法 - 保护股民的钱袋子！法律如何规范证券市场和投资行为？📈
+---
+
 # 第23章：证券法 - 保护股民的钱袋子！法律如何规范证券市场和投资行为？📈
 
 ## 💥 开头故事：1929年股灾与证券法的诞生
@@ -573,9 +578,4 @@
 5. **投资者教育**：除了法律保护，投资者教育的重要性如何体现？如何提高投资者的风险意识和自我保护能力？
 
 
-## 📖 章节导航
-
-**上一章**：[破产法](./第22章_破产法.md) - 给了失败者重新开始的机会
-
-**下一章**：[消费者权益保护法](./第24章_消费者权益保护法.md) - 顾客就是上帝
 
