--- a/第25章_无罪推定.md
+++ b/第25章_无罪推定.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第25章：无罪推定 - 在证明有罪之前，你都是无辜的！刑事司法中的黄金原则！⚖️
+---
+
 # 第25章：无罪推定 - 在证明有罪之前，你都是无辜的！刑事司法中的黄金原则！⚖️
 
 ## 💥 开头故事：辛普森案的世纪审判
@@ -483,9 +488,4 @@
 5. **全球标准**：是否应该建立全球统一的无罪推定标准？如何尊重不同国家的法律传统和文化差异？
 
 
-## 📖 章节导航
-
-**上一章**：[消费者权益保护法](./第24章_消费者权益保护法.md) - 顾客就是上帝
-
-**下一章**：[正当防卫](./第26章_正当防卫.md) - 保护自己不算犯法
 
