--- a/第28章_海商法.md
+++ b/第28章_海商法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第28章：海商法 - 海洋世界的法律规则！航运贸易的法律如何保障全球贸易？🚢
+---
+
 # 第28章：海商法 - 海洋世界的法律规则！航运贸易的法律如何保障全球贸易？🚢
 
 ## 💥 开头故事：泰坦尼克号与《海上人命安全公约》
@@ -588,9 +593,4 @@
 5. **全球化与区域化的平衡**：在全球航运网络中，如何平衡国际统一规则与区域特色需求？如何在维护国家利益的同时促进国际合作？
 
 
-## 📖 章节导航
-
-**上一章**：[陪审团制度](./第27章_陪审团制度.md) - 普通人也能决定法律问题
-
-**下一章**：[外交豁免权](./第29章_外交豁免权.md) - 外国大使为什么不会被逮捕
 
