--- a/第29章_外交豁免权.md
+++ b/第29章_外交豁免权.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第29章：外交豁免权 - 外国大使为什么不会被逮捕？国际外交的法律规则如何保障国家间交往？🌍
+---
+
 # 第29章：外交豁免权 - 外国大使为什么不会被逮捕？国际外交的法律规则如何保障国家间交往？🌍
 
 ## 💥 开头故事：1963年莫斯科红场的美苏对峙
@@ -641,9 +646,4 @@
 5. **未来国际关系的展望**：在多极化世界格局下，外交豁免权制度将如何演变？能否适应未来的国际关系需要？
 
 
-## 📖 章节导航
-
-**上一章**：[海商法](./第28章_海商法.md) - 海洋世界的法律规则
-
-**下一章**：[国际刑法](./第30章_国际刑法.md) - 战争罪也要受到惩罚
 
