--- a/第2章_古罗马十二铜表法.md
+++ b/第2章_古罗马十二铜表法.md
@@ -1,10 +1,15 @@
+---
+layout: default
+title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让平民看懂？📜
+---
+
 # 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让平民看懂？📜
 
 ## 🎧 收听本章播客
 
 <audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
-  <source src="podcast/第2章_古罗马十二铜表法.mp3" type="audio/mpeg">
-  您的浏览器不支持音频播放，请<a href="podcast/第2章_古罗马十二铜表法.mp3">下载音频文件</a>。
+  <source src="/podcast/第2章_古罗马十二铜表法.mp3" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="/podcast/第2章_古罗马十二铜表法.mp3">下载音频文件</a>。
 </audio>
 
 ## 💥 开头故事：平民的愤怒抗议
@@ -260,8 +265,3 @@
 4. **数字时代**：在今天这个信息时代，我们是否还需要把法律"刻在铜板上"公开展示？
 
 
-## 📖 章节导航
-
-**上一章**：[第1章：汉谟拉比法典](./第1章_汉谟拉比法典.md) - 3800年前的"以眼还眼"到底有多狠？
-
-**下一章**：[第3章：中国秦律](./第3章_中国秦律.md) - 为什么说秦朝的法律严到让百姓闻风丧胆？
