--- a/第30章_国际刑法.md
+++ b/第30章_国际刑法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第30章：国际刑法 - 战争罪也要受到惩罚！国际社会如何追究严重国际犯罪的责任？⚖️
+---
+
 # 第30章：国际刑法 - 战争罪也要受到惩罚！国际社会如何追究严重国际犯罪的责任？⚖️
 
 ## 💥 开头故事：米洛舍维奇的世纪审判
@@ -643,11 +648,6 @@
 
 5. **理想与现实的平衡**：在国际政治现实下，国际刑法如何实现其崇高的理想？面对大国政治时如何保持独立性？
 
-## 📖 章节导航
-
-**上一章**：[外交豁免权](./第29章_外交豁免权.md) - 外国大使为什么不会被逮捕
-
-**下一章**：[全书完结](./README.md) - 感谢阅读这本法律趣史！
 
 **全书完结！**
 **感谢阅读这本法律趣史！希望这些故事让你对法律有了新的认识和理解！**
