--- a/第5章_权利法案.md
+++ b/第5章_权利法案.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第5章：权利法案 - 老百姓终于有了说话的权利！议会如何用法律制服了"神仙国王"？🗣️
+---
+
 # 第5章：权利法案 - 老百姓终于有了说话的权利！议会如何用法律制服了"神仙国王"？🗣️
 
 ## 💥 开头故事：詹姆斯二世的"神仙梦"
@@ -244,8 +249,3 @@
 4. **个人权利**：权利法案主要保护的是有产阶级的权利，现代法律如何保护每个人的权利？
 
 
-## 📖 章节导航
-
-**上一章**：[第4章：大宪章](./第4章_大宪章.md) - 国王也要守规矩！英国贵族们如何用一张纸限制了王权？
-
-**下一章**：[第6章：拿破仑法典](./第6章_拿破仑法典.md) - 拿破仑用一部法典征服了欧洲，比他的军队还厉害！
