--- a/第6章_拿破仑法典.md
+++ b/第6章_拿破仑法典.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第6章：拿破仑法典 - 小个子用一部法典征服了欧洲，比百万大军还厉害！⚔️
+---
+
 # 第6章：拿破仑法典 - 小个子用一部法典征服了欧洲，比百万大军还厉害！⚔️
 
 ## 💥 开头故事：深夜的法典讨论会
@@ -278,8 +283,3 @@
 4. **个人经历**：你有没有遇到过法律问题？你觉得现在的法律体系是否完善？有什么建议？
 
 
-## 📖 章节导航
-
-**上一章**：[第5章：权利法案](./第5章_权利法案.md) - 老百姓终于有了说话的权利！英国议会如何用法律限制了王权？
-
-**下一章**：[第7章：马伯里诉麦迪逊案](./第7章_马伯里诉麦迪逊案.md) - 法院有权说"不"！一个小案件如何确立了美国宪政制度？
