--- a/第8章_斯科特案.md
+++ b/第8章_斯科特案.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第8章：斯科特案 - 引发内战的法律判决！一个黑奴的自由诉讼如何撕裂了美国？⚖️
+---
+
 # 第8章：斯科特案 - 引发内战的法律判决！一个黑奴的自由诉讼如何撕裂了美国？⚖️
 
 ## 💥 开头故事：一个黑奴的十年法律斗争
@@ -352,9 +357,4 @@
 
 5. **个人勇气**：斯科特为自由抗争11年，这种坚持精神对你有什么启发？
 
-## 📖 章节导航
-
-**上一章**：[马伯里诉麦迪逊案](./第7章_马伯里诉麦迪逊案.md) - 法院有权说"不"！一个小案件如何改变了美国宪政？
-
-**下一章**：[米兰达警告](./第9章_米兰达警告.md) - 你有权保持沉默！为什么警察逮捕你时都要说这句话？
 
