--- a/第9章_米兰达警告.md
+++ b/第9章_米兰达警告.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第9章：米兰达警告 - 你有权保持沉默！警察逮捕你时为什么要说这句话？⚖️
+---
+
 # 第9章：米兰达警告 - 你有权保持沉默！警察逮捕你时为什么要说这句话？⚖️
 
 ## 💥 开头故事：一个改变警察执法方式的案件
@@ -401,9 +406,4 @@
 
 5. **个人经历**：你有没有遇到过需要了解自己权利的情况？了解这些权利对你有什么帮助？
 
-## 📖 章节导航
-
-**上一章**：[斯科特案](./第8章_斯科特案.md) - 引发内战的法律判决！一个黑奴的自由诉讼如何撕裂了美国？
-
-**下一章**：[纽伦堡审判](./第10章_纽伦堡审判.md) - 战后正义的体现！如何通过法律审判战争罪犯？
 
