--- a/第10章_纽伦堡审判.md
+++ b/第10章_纽伦堡审判.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第10章：纽伦堡审判 - 战后正义的体现！如何通过法律审判战争罪犯？⚖️
+---
+
 # 第10章：纽伦堡审判 - 战后正义的体现！如何通过法律审判战争罪犯？⚖️
 
 ## 💥 开头故事：1945年11月20日的法庭
@@ -452,9 +457,4 @@
 
 5. **中国角色**：中国在当代国际刑事司法中应该扮演什么角色？如何为国际法治做出贡献？
 
-## 📖 章节导航
-
-**上一章**：[米兰达警告](./第9章_米兰达警告.md) - 你有权保持沉默！为什么警察逮捕你时都要说这句话？
-
-**下一章**：[世界人权宣言](./第11章_世界人权宣言.md) - 全人类的共同承诺！这份文件如何改变了世界？
 
