--- a/第16章_网络安全法.md
+++ b/第16章_网络安全法.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第16章：网络安全法 - 网络世界的"警察"！如何用法律守护我们的数字生活？🔐
+---
+
 # 第16章：网络安全法 - 网络世界的"警察"！如何用法律守护我们的数字生活？🔐
 
 ## 💥 开头故事：震网病毒的惊天攻击
@@ -508,9 +513,4 @@
 5. **未来挑战**：随着量子计算、元宇宙等新技术的发展，网络安全面临哪些新的挑战？我们应该如何应对？
 
 
-## 📖 章节导航
-
-**上一章**：[人工智能法律](./第15章_人工智能法律.md) - 机器人也要遵守法律，AI时代的法律挑战
-
-**下一章**：[版权法](./第17章_版权法.md) - 保护创作者的权利，创意如何成为法律保护的财产
 
