--- a/第27章_陪审团制度.md
+++ b/第27章_陪审团制度.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第27章：陪审团制度 - 普通人也能决定法律问题！公民参与司法的制度设计！👥
+---
+
 # 第27章：陪审团制度 - 普通人也能决定法律问题！公民参与司法的制度设计！👥
 
 ## 💥 开头故事：辛普森案中的"人民的审判"
@@ -581,9 +586,4 @@
 5. **技术发展与制度适应**：随着人工智能、大数据等技术的发展，陪审团制度需要如何适应技术变革？技术能否替代人类陪审员？
 
 
-## 📖 章节导航
-
-**上一章**：[正当防卫](./第26章_正当防卫.md) - 保护自己不算犯法
-
-**下一章**：[海商法](./第28章_海商法.md) - 海洋世界的法律规则
 
