--- a/第3章_中国秦律.md
+++ b/第3章_中国秦律.md
@@ -1,10 +1,15 @@
+---
+layout: default
+title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有多狠？⚰️
+---
+
 # 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有多狠？⚰️
 
 ## 🎧 收听本章播客
 
 <audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
-  <source src="podcast/第3章_中国秦律.mp3" type="audio/mpeg">
-  您的浏览器不支持音频播放，请<a href="podcast/第3章_中国秦律.mp3">下载音频文件</a>。
+  <source src="/podcast/第3章_中国秦律.mp3" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="/podcast/第3章_中国秦律.mp3">下载音频文件</a>。
 </audio>
 
 ## 💥 开头故事：一个农民的悲剧
@@ -235,8 +240,3 @@
 4. **文化传承**：为什么中国古代的法律思想倾向于"严刑峻法"，而西方更强调"权利保障"？
 
 
-## 📖 章节导航
-
-**上一章**：[第2章：古罗马十二铜表法](./第2章_古罗马十二铜表法.md) - 法律也要写出来给普通人看！为什么贵族们气得要死？
-
-**下一章**：[第4章：大宪章](./第4章_大宪章.md) - 国王也要守规矩！英国贵族们如何用一张纸限制了王权？
