--- a/第4章_大宪章.md
+++ b/第4章_大宪章.md
@@ -1,10 +1,15 @@
+---
+layout: default
+title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服了暴君👑
+---
+
 # 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服了暴君👑
 
 ## 🎧 收听本章播客
 
 <audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
-  <source src="podcast/第4章_大宪章.mp3" type="audio/mpeg">
-  您的浏览器不支持音频播放，请<a href="podcast/第4章_大宪章.mp3">下载音频文件</a>。
+  <source src="/podcast/第4章_大宪章.mp3" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="/podcast/第4章_大宪章.mp3">下载音频文件</a>。
 </audio>
 
 ## 💥 开头故事：泰晤士河畔的生死对峙
@@ -232,8 +237,3 @@
 4. **现代意义**：如果让你为21世纪写一部"大宪章"，你会加入哪些条款？
 
 
-## 📖 章节导航
-
-**上一章**：[第3章：中国秦律](./第3章_中国秦律.md) - 为什么说秦朝的法律严到让百姓闻风丧胆？
-
-**下一章**：[第5章：权利法案](./第5章_权利法案.md) - 老百姓终于有了说话的权利！英国议会如何用法律限制了王权？
