--- a/第7章_马伯里诉麦迪逊案.md
+++ b/第7章_马伯里诉麦迪逊案.md
@@ -1,3 +1,8 @@
+---
+layout: default
+title: 第7章：马伯里诉麦迪逊案 - 法院有权说"不"！一个小案件如何改变了美国宪政？⚖️
+---
+
 # 第7章：马伯里诉麦迪逊案 - 法院有权说"不"！一个小案件如何改变了美国宪政？⚖️
 
 ## 💥 开头故事：一份迟到的委任状
@@ -217,9 +222,4 @@
 
 4. **个人经历**：你有没有遇到过需要"说'不'"的情况？马歇尔的智慧策略对你有什么启发？
 
-## 📖 章节导航
-
-**上一章**：[拿破仑法典](./第6章_拿破仑法典.md) - 现代法律的"模板"，一个皇帝如何用法律改变了整个欧洲？
-
-**下一章**：[斯科特案](./第8章_斯科特案.md) - 引发内战的法律判决！一个黑奴的自由诉讼如何撕裂了美国？
 
