docs: update display style

--- a/第1章_汉谟拉比法典.md
+++ b/第1章_汉谟拉比法典.md
@@ -66,9 +66,11 @@ title: 第1章：汉谟拉比法典 - 3800年前的"以眼还眼"到底有多狠
 
 汉谟拉比法典最著名的就是它的报复性原则，用现代话说就是"同态复仇"：
 
-- **第196条**："如果一个人毁掉了另一个人的眼睛，那么他的眼睛也应该被毁掉。"
-- **第197条**："如果一个人打断了另一个人的骨头，那么他的骨头也应该被打断。"
-- **第200条**："如果一个人打掉了和他自己地位相同的人的牙齿，那么他的牙齿也应该被打掉。"
+- **第196条**：如果一个人毁掉了另一个人的眼睛，那么他的眼睛也应该被毁掉。
+
+- **第197条**：如果一个人打断了另一个人的骨头，那么他的骨头也应该被打断。
+
+- **第200条**：如果一个人打掉了和他自己地位相同的人的牙齿，那么他的牙齿也应该被打掉。
 
 *密密麻麻的楔形文字记录着282条法律 - 这就是3800年前的"法律条文" 📜*
 
@@ -82,7 +84,7 @@ title: 第1章：汉谟拉比法典 - 3800年前的"以眼还眼"到底有多狠
 - **平民（穆什钦努）**：地位中等，赔偿标准较低
 - **奴隶（瓦尔杜）**：基本没人权，伤害奴隶只需赔偿主人
 
-**例子**：如果贵族打伤了平民，只需赔偿一点银子；但如果平民打伤了贵族，可能要被打断骨头！
+- **例子**：如果贵族打伤了平民，只需赔偿一点银子；但如果平民打伤了贵族，可能要被打断骨头！
 
 这就是古代的"公平"——按身份来定惩罚标准。
 
@@ -106,7 +108,7 @@ title: 第1章：汉谟拉比法典 - 3800年前的"以眼还眼"到底有多狠
 - 证人制度、宣誓制度
 - 上诉程序
 
-**惊人的先进性**：法典中有很多现代法律制度的雏形！
+- **惊人的先进性**：法典中有很多现代法律制度的雏形！
 
 ### 现代法律还在用的概念
 
