--- a/第3章_中国秦律.md
+++ b/第3章_中国秦律.md
@@ -69,31 +69,31 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 
 秦朝的死刑种类多得让人眼花缭乱，每一种都极其残酷：
 
-**绞刑**：相对"人道"的死刑，勒死。
-**斩首**：砍头，头颅要挂在城门上示众。
-**腰斩**：从腰部斩断，死得很痛苦。
-**车裂**：五马分尸，极其残忍。
-**烹刑**：扔进大锅里活活煮死。
-**坑杀**：活埋，坑杀过40万赵国降卒。
-**枭首**：斩首后头颅挂在高处示众。
-**戮尸**：死后还要被鞭尸。
+- **绞刑**：相对"人道"的死刑，勒死。
+- **斩首**：砍头，头颅要挂在城门上示众。
+- **腰斩**：从腰部斩断，死得很痛苦。
+- **车裂**：五马分尸，极其残忍。
+- **烹刑**：扔进大锅里活活煮死。
+- **坑杀**：活埋，坑杀过40万赵国降卒。
+- **枭首**：斩首后头颅挂在高处示众。
+- **戮尸**：死后还要被鞭尸。
 
 ### 肉刑的"终身纪念"
 
 如果不处死，但让你终身残疾，也很恐怖：
 
-**劓刑**：割掉鼻子（就是开篇故事里的张三）
-**刖刑**：砍掉脚或腿
-**黥刑**：在脸上刺字，成为终身耻辱
-**宫刑**：阉割，司马迁就受过此刑
-**笞刑**：鞭打，可能打死人
+- **劓刑**：割掉鼻子（就是开篇故事里的张三）
+- **刖刑**：砍掉脚或腿
+- **黥刑**：在脸上刺字，成为终身耻辱
+- **宫刑**：阉割，司马迁就受过此刑
+- **笞刑**：鞭打，可能打死人
 
 ### 劳役刑的"强制劳动"
 
-**城旦舂**：男子修城墙，女子舂米，终生劳役
-**鬼薪**：给宗庙砍柴，终生劳役
-**白粲**：给宗庙择米，终生劳役
-**隶臣妾**：沦为官奴，世世代代为奴
+- **城旦舂**：男子修城墙，女子舂米，终生劳役
+- **鬼薪**：给宗庙砍柴，终生劳役
+- **白粲**：给宗庙择米，终生劳役
+- **隶臣妾**：沦为官奴，世世代代为奴
 
 ### 让人崩溃的"连坐制度"
 
@@ -110,36 +110,36 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 
 秦朝的法律详细到了令人发指的程度：
 
-**睡懒觉也有罪**：黎明必须起床，否则要受罚
-**乱扔垃圾要断手**：街上扔垃圾，剁手！
-**借东西不还要重罚**：借钱不还，加倍赔偿
-**穿错衣服要受罚**：不同身份的人穿不同的衣服
-**说话要小心**：说错话可能被处死
+- **睡懒觉也有罪**：黎明必须起床，否则要受罚
+- **乱扔垃圾要断手**：街上扔垃圾，剁手！
+- **借东西不还要重罚**：借钱不还，加倍赔偿
+- **穿错衣服要受罚**：不同身份的人穿不同的衣服
+- **说话要小心**：说错话可能被处死
 
 ### 家庭生活的"法律规定"
 
 连家庭生活都有详细规定：
 
-**婚姻由父母决定**：个人无权选择配偶
-**父亲权力极大**：可以卖子女为奴
-**妻子地位低下**：完全是丈夫的财产
-**子女必须孝顺**：不孝要受重罚
+- **婚姻由父母决定**：个人无权选择配偶
+- **父亲权力极大**：可以卖子女为奴
+- **妻子地位低下**：完全是丈夫的财产
+- **子女必须孝顺**：不孝要受重罚
 
 ### 经济活动的"全面管控"
 
-**统一度量衡**：全国使用统一的度量衡
-**统一货币**：使用圆形方孔钱
-**盐铁专营**：盐和铁由国家垄断
-**重农抑商**：商人地位很低
+- **统一度量衡**：全国使用统一的度量衡
+- **统一货币**：使用圆形方孔钱
+- **盐铁专营**：盐和铁由国家垄断
+- **重农抑商**：商人地位很低
 
 ### 让人哭笑不得的奇葩规定
 
 有些法律规定简直让人哭笑不得：
 
-**禁止三人以上聚会**：防止串联谋反
-**禁止晚上出门**：晚上必须在家
-**禁止私人藏书**：除了法家经典，其他书都要烧掉
-**禁止议论朝政**：批评皇帝要处死
+- **禁止三人以上聚会**：防止串联谋反
+- **禁止晚上出门**：晚上必须在家
+- **禁止私人藏书**：除了法家经典，其他书都要烧掉
+- **禁止议论朝政**：批评皇帝要处死
 
 ## 🌍 历史影响：严刑峻法的双面性
 
