--- a/第4章_大宪章.md
+++ b/第4章_大宪章.md
@@ -87,15 +87,15 @@ title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服
 
 大宪章只有63个条款，但每一个都至关重要：
 
-**第12条**：国王征收盾牌钱必须经过"全国公意"。
-**第14条**：为了全国公意，要召集各教区主教、修道院长、伯爵和男爵。
-**第15条**：国王不得擅自征收封建协助金。
-**第17条**：普通诉讼应在地方审理，不随国王巡游。
-**第20条**：自由民犯罪，罚金应与罪过相称。
-**第21条**：伯爵和男爵犯罪，应由同等地位的人审判。
-**第39条**：任何自由人，未经同等地位者的合法判决或国家法律，不得被逮捕、监禁、没收财产、剥夺法律保护或流放。
-**第40条**：国王不得向任何人出售、拒绝或延宕公正的裁判。
-**第61条**：设立25人委员会监督国王执行宪章。
+- **第12条**：国王征收盾牌钱必须经过"全国公意"。
+- **第14条**：为了全国公意，要召集各教区主教、修道院长、伯爵和男爵。
+- **第15条**：国王不得擅自征收封建协助金。
+- **第17条**：普通诉讼应在地方审理，不随国王巡游。
+- **第20条**：自由民犯罪，罚金应与罪过相称。
+- **第21条**：伯爵和男爵犯罪，应由同等地位的人审判。
+- **第39条**：任何自由人，未经同等地位者的合法判决或国家法律，不得被逮捕、监禁、没收财产、剥夺法律保护或流放。
+- **第40条**：国王不得向任何人出售、拒绝或延宕公正的裁判。
+- **第61条**：设立25人委员会监督国王执行宪章。
 
 ### 最核心的原则
 
