--- a/第5章_权利法案.md
+++ b/第5章_权利法案.md
@@ -40,10 +40,13 @@ title: 第5章：权利法案 - 老百姓终于有了说话的权利！议会如
 
 斯图亚特王朝的国王们都坚信"君权神授"理论：
 
-**詹姆斯一世**："国王是上帝在人间的代表，国王的权力来自上帝，不对任何人负责。"
-**查理一世**："议会是由我召集的，我的命令就是法律。"
-**查理二世**："国王想做什么就做什么，议会无权干涉。"
-**詹姆斯二世**："天主教是唯一真正的宗教，我要让英国人都皈依天主教。"
+**詹姆斯一世**：国王是上帝在人间的代表，国王的权力来自上帝，不对任何人负责。
+
+**查理一世**：议会是由我召集的，我的命令就是法律。
+
+**查理二世**：国王想做什么就做什么，议会无权干涉。
+
+**詹姆斯二世**：天主教是唯一真正的宗教，我要让英国人都皈依天主教。
 
 这些国王完全忘记了474年前签署的大宪章原则：国王也要遵守法律！
 
@@ -51,10 +54,10 @@ title: 第5章：权利法案 - 老百姓终于有了说话的权利！议会如
 
 斯图亚特王朝时期，国王和议会之间的斗争越来越激烈：
 
-**税收问题**：国王想随意征税，议会要求征税必须经过同意
-**宗教问题**：国王想推广天主教，议会坚持新教传统
-**军事问题**：国王想建立常备军，议会担心军事专制
-**法律问题**：国王想任意逮捕，议会要求遵守正当程序
+- **税收问题**：国王想随意征税，议会要求征税必须经过同意
+- **宗教问题**：国王想推广天主教，议会坚持新教传统
+- **军事问题**：国王想建立常备军，议会担心军事专制
+- **法律问题**：国王想任意逮捕，议会要求遵守正当程序
 
 ### 英国内战的惨痛教训
 
@@ -104,19 +107,19 @@ title: 第5章：权利法案 - 老百姓终于有了说话的权利！议会如
 
 权利法案虽然只有13个条款，但每一条都是对王权的致命限制：
 
-**第1条**：国王不得以王权停止法律的执行。
-**第2条**：国王不得以王权豁免法律的执行。
-**第3条**：设立处理宗教事务的委员会为非法。
-**第4条**：征税必须经过议会同意。
-**第5条**：人民有向国王请愿的权利。
-**第6条**：常备军只有在议会同意时才能设立。
-**第7条**：新教徒有携带武器的权利。
-**第8条**：议会选举必须自由，议会辩论必须自由。
-**第9条**：不得要求过多的保释金，不得处以残酷的刑罚。
-**第10条**：不得对陪审团施加不当影响。
-**第11条**：在定罪前不得处以罚款或没收财产。
-**第12条**：议会应经常集会。
-**第13条**：为维护新教，制定王位继承法。
+- **第1条**：国王不得以王权停止法律的执行。
+- **第2条**：国王不得以王权豁免法律的执行。
+- **第3条**：设立处理宗教事务的委员会为非法。
+- **第4条**：征税必须经过议会同意。
+- **第5条**：人民有向国王请愿的权利。
+- **第6条**：常备军只有在议会同意时才能设立。
+- **第7条**：新教徒有携带武器的权利。
+- **第8条**：议会选举必须自由，议会辩论必须自由。
+- **第9条**：不得要求过多的保释金，不得处以残酷的刑罚。
+- **第10条**：不得对陪审团施加不当影响。
+- **第11条**：在定罪前不得处以罚款或没收财产。
+- **第12条**：议会应经常集会。
+- **第13条**：为维护新教，制定王位继承法。
 
 ### 核心原则解读
 
@@ -133,12 +136,12 @@ title: 第5章：权利法案 - 老百姓终于有了说话的权利！议会如
 
 权利法案可以说是大宪章的升级版：
 
-**大宪章（1215年）**：主要保护贵族权利
-**权利法案（1689年）**：保护更广泛的公民权利
-**大宪章**：强调国王要遵守法律
-**权利法案**：强调议会主权高于王权
-**大宪章**：程序正义的萌芽
-**权利法案**：完整的权利保障体系
+- **大宪章（1215年）**：主要保护贵族权利
+- **权利法案（1689年）**：保护更广泛的公民权利
+- **大宪章**：强调国王要遵守法律
+- **权利法案**：强调议会主权高于王权
+- **大宪章**：程序正义的萌芽
+- **权利法案**：完整的权利保障体系
 
 ## 🌍 深远影响：现代民主制度的基石
 
