--- a/第6章_拿破仑法典.md
+++ b/第6章_拿破仑法典.md
@@ -147,17 +147,17 @@ title: 第6章：拿破仑法典 - 小个子用一部法典征服了欧洲，比
 
 拿破仑法典相比传统法律有巨大进步：
 
-**中世纪法律**：等级森严，不平等
-**拿破仑法典**：人人平等
+- **中世纪法律**：等级森严，不平等
+- **拿破仑法典**：人人平等
 
-**传统法律**：禁止离婚
-**拿破仑法典**：允许离婚
+- **传统法律**：禁止离婚
+- **拿破仑法典**：允许离婚
 
-**旧制度**：长子继承制
-**法典**：子女平等继承
+- **旧制度**：长子继承制
+- **法典**：子女平等继承
 
-**教会法**：教会法庭
-**法典**：世俗法庭
+- **教会法**：教会法庭
+- **法典**：世俗法庭
 
 ## 🌍 世界影响：法典征服了欧洲
 
