--- a/第8章_斯科特案.md
+++ b/第8章_斯科特案.md
@@ -49,7 +49,7 @@ title: 第8章：斯科特案 - 引发内战的法律判决！一个黑奴的自
 
 德雷德·斯科特的经历非常特殊：
 
-**1800年代出生**：斯科特出生于弗吉尼亚州，生来就是奴隶
+- **1800年代出生**：斯科特出生于弗吉尼亚州，生来就是奴隶
 
 **1830年代搬家**：
 - 主人把他带到伊利诺伊州（自由州）
@@ -60,7 +60,7 @@ title: 第8章：斯科特案 - 引发内战的法律判决！一个黑奴的自
 - 主人带他回到密苏里州（奴隶州）
 - 斯科特认为在自由州生活后，他应该获得自由
 
-**关键法律问题**：一旦奴隶被带到自由州，是否就自动获得自由？
+- **关键法律问题**：一旦奴隶被带到自由州，是否就自动获得自由？
 
 ## ⚖️ 法律斗争：斯科特的十年诉讼之路
 
@@ -78,7 +78,7 @@ title: 第8章：斯科特案 - 引发内战的法律判决！一个黑奴的自
 - 我有权把财产带到任何地方
 - 州法律不能剥夺我的财产权
 
-**结果**：斯科特败诉，因为法院认为非洲裔没有公民权。
+- **结果**：斯科特败诉，因为法院认为非洲裔没有公民权。
 
 ### 上诉到密苏里最高法院（1852年）
 
