--- a/第3章_中国秦律.md
+++ b/第3章_中国秦律.md
@@ -8,8 +8,8 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 ## 🎧 收听本章播客
 
 <audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
-  <source src="/podcast/第3章_中国秦律.mp3" type="audio/mpeg">
-  您的浏览器不支持音频播放，请<a href="/podcast/第3章_中国秦律.mp3">下载音频文件</a>。
+  <source src="{{ '/podcast/第3章_中国秦律.mp3' | relative_url }}" type="audio/mpeg">
+  您的浏览器不支持音频播放，请<a href="{{ '/podcast/第3章_中国秦律.mp3' | relative_url }}">下载音频文件</a>。
 </audio>
 
 ## 💥 开头故事：一个农民的悲剧
