--- a/第3章_中国秦律.md
+++ b/第3章_中国秦律.md
@@ -194,14 +194,11 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 
 ### 有趣的对比
 
-**秦律**：偷一钱要砍手
-**现代法律**：偷窃要看数额，初犯一般不判刑
-
-**秦律**：不孝要处死
-**现代法律**：赡养父母是道德义务，不构成犯罪
-
-**秦律**：议论朝政要处死
-**现代法律**：言论自由是基本权利
+| 秦律 | 现代法律 |
+|------|----------|
+| 偷一钱要砍手 | 偷窃要看数额，初犯一般不判刑 |
+| 不孝要处死 | 赡养父母是道德义务，不构成犯罪 |
+| 议论朝政要处死 | 言论自由是基本权利 |
 
 ## 🎪 趣味知识：关于秦律的冷知识
 
