--- a/第2章_古罗马十二铜表法.md
+++ b/第2章_古罗马十二铜表法.md
@@ -157,13 +157,10 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 
 让我们看几个具体的条文：
 
-**第八表第2条**：如果毁坏他人肢体，则应受到同等的伤害。
-
-**第八表第10条**：如果有人夜间砍伐他人的树木，则应处以双倍赔偿。
-
-**第四表第1条**：婴儿畸形者应立即处死。
-
-**第八表第21条**：如果监护人欺骗被监护人，则应被剥夺监护权。
+- **第八表第2条**：如果毁坏他人肢体，则应受到同等的伤害。
+- **第八表第10条**：如果有人夜间砍伐他人的树木，则应处以双倍赔偿。
+- **第四表第1条**：婴儿畸形者应立即处死。
+- **第八表第21条**：如果监护人欺骗被监护人，则应被剥夺监护权。
 
 ## 🌍 深远影响：西方法律的"老祖宗"
 
@@ -219,17 +216,12 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 
 让我们对比一下十二铜表法和现代法律：
 
-**十二铜表法**：如果父亲三次出卖自己的儿子，儿子则不再受父亲控制。
-
-**现代法律**：父母对子女有监护权，但不得虐待和遗弃。
-
-**十二铜表法**：债权人可以拘留债务人，并用铁链锁起来。
-
-**现代法律**：债务人的人身自由受法律保护，不得非法拘禁。
-
-**十二铜表法**：妇女不得参与政治事务。
-
-**现代法律**：男女平等，妇女享有完全的政治权利。
+- **十二铜表法**：如果父亲三次出卖自己的儿子，儿子则不再受父亲控制。
+- **现代法律**：父母对子女有监护权，但不得虐待和遗弃。
+- **十二铜表法**：债权人可以拘留债务人，并用铁链锁起来。
+- **现代法律**：债务人的人身自由受法律保护，不得非法拘禁。
+- **十二铜表法**：妇女不得参与政治事务。
+- **现代法律**：男女平等，妇女享有完全的政治权利。
 
 ## 🎪 趣味知识：关于十二铜表法的冷知识
 
